# Hexa-Haibot_Gazebo_Simulation

./: .gitattributes  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/h_robix_control/: ButtonData.h  GetGroupMotorData.h  GetGroupMotorDataRequest.h  GetGroupMotorDataResponse.h  SetGroupMotorData.h
devel/include/hexapod_msgs/: FeetPositions.h  LegJoints.h  LegsJoints.h  Pose.h  RPY.h  Sounds.h
devel/include/velodyne_laserscan/: VelodyneLaserScanConfig.h
devel/include/velodyne_multi_laserscan/: VelodyneMultiLaserScanConfig.h
devel/include/velodyne_pointcloud/: TransformNodeConfig.h
devel/lib/deep_rl_hexapod/: drl_agent.py  result_graph  test_model_irl.py
devel/lib/h_robix_control/: dinamixel_motor_controllers
devel/lib/hexapod_controller/: hexapod_controller
src/hexapod_haibot/: CMakeLists.txt  package.xml  setup.py
src/hexapod_haibot/config/: hexa_haibot_control.yaml
src/hexapod_haibot/launch/: hexahaibot_gazebo.launch
src/hexapod_haibot/meshes/: coxa.STL  coxa_2.STL  coxa_5.STL  femur_4.STL  femur_5.STL  femur_6.STL  tibia_2.STL  tibia_3.STL  tibia_4.STL
src/hexapod_haibot/meshes/older_version/: base_link.STL  coxa_1.STL  coxa_3.STL  coxa_6.STL  femur_1.STL  femur_2.STL  femur_3.STL  femur_6.STL  tibia_1.STL  tibia_5.STL  tibia_6.STL
src/hexapod_haibot/scripts/: hexahaibot_teleop_key.py  pose_saving.py  walker_demo.py
src/hexapod_haibot/src/hexapod_haibot/: hexahaibot.py
src/hexapod_haibot/urdf/: backup.urdf  hexa_last_ver_i_swear.urdf  hexapod_haibot.urdf
src/realsense_gazebo_plugin/: CMakeLists.txt
(+163 files in other folders)
